fixed textwrap and map formatting issues

--- a/css/main.css
+++ b/css/main.css
@@ -85,8 +85,10 @@ a {
 
 .row {
 	background-color: #302f2f;
-	padding-top: 3em;
 	padding-bottom: 3em;
+}
+.bioBody{
+    word-wrap: break-word;
 }
 
 @media screen and (max-width: 767px) {
@@ -109,8 +111,6 @@ a {
   		margin-left: auto;
   		margin-right: auto;
   		width: 80%;
-  		margin-top: 3em;
-  		margin-bottom: 3em;
   	}
 
   	#songs {
